--- a/analysis/04_Clustered_Analysis.html
+++ b/analysis/04_Clustered_Analysis.html
@@ -639,9 +639,14 @@ Monte Carlo Results
 95% CI
 </div>
 </th>
+<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="1">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+size
+</div>
+</th>
 </tr>
 <tr>
-<th style="empty-cells: hide;border-bottom:hidden;" colspan="8">
+<th style="empty-cells: hide;border-bottom:hidden;" colspan="9">
 </th>
 </tr>
 <tr>
@@ -668,6 +673,9 @@ cov_low
 </th>
 <th style="text-align:right;">
 cov_high
+</th>
+<th style="text-align:left;">
+size
 </th>
 </tr>
 </thead>
@@ -697,6 +705,9 @@ cov_high
 <td style="text-align:right;">
 0.9420491
 </td>
+<td style="text-align:left;">
+small
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -722,6 +733,9 @@ cov_high
 </td>
 <td style="text-align:right;">
 0.9574535
+</td>
+<td style="text-align:left;">
+small
 </td>
 </tr>
 <tr>
@@ -749,6 +763,9 @@ cov_high
 <td style="text-align:right;">
 0.9574535
 </td>
+<td style="text-align:left;">
+large
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -774,6 +791,9 @@ cov_high
 </td>
 <td style="text-align:right;">
 0.9574535
+</td>
+<td style="text-align:left;">
+large
 </td>
 </tr>
 <tr>
@@ -801,6 +821,9 @@ cov_high
 <td style="text-align:right;">
 0.9523646
 </td>
+<td style="text-align:left;">
+small
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -826,6 +849,9 @@ cov_high
 </td>
 <td style="text-align:right;">
 0.9506575
+</td>
+<td style="text-align:left;">
+small
 </td>
 </tr>
 <tr>
@@ -853,6 +879,9 @@ cov_high
 <td style="text-align:right;">
 0.9489452
 </td>
+<td style="text-align:left;">
+large
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -879,6 +908,9 @@ cov_high
 <td style="text-align:right;">
 0.9658113
 </td>
+<td style="text-align:left;">
+large
+</td>
 </tr>
 </tbody>
 </table>
@@ -900,9 +932,14 @@ Monte Carlo Results
 95% CI
 </div>
 </th>
+<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="1">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+size
+</div>
+</th>
 </tr>
 <tr>
-<th style="empty-cells: hide;border-bottom:hidden;" colspan="8">
+<th style="empty-cells: hide;border-bottom:hidden;" colspan="9">
 </th>
 </tr>
 <tr>
@@ -929,6 +966,9 @@ cov_low
 </th>
 <th style="text-align:right;">
 cov_high
+</th>
+<th style="text-align:left;">
+size
 </th>
 </tr>
 </thead>
@@ -958,6 +998,9 @@ cov_high
 <td style="text-align:right;">
 0.9506575
 </td>
+<td style="text-align:left;">
+small
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -983,6 +1026,9 @@ cov_high
 </td>
 <td style="text-align:right;">
 0.7208884
+</td>
+<td style="text-align:left;">
+small
 </td>
 </tr>
 <tr>
@@ -1010,6 +1056,9 @@ cov_high
 <td style="text-align:right;">
 0.9624885
 </td>
+<td style="text-align:left;">
+large
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -1035,6 +1084,9 @@ cov_high
 </td>
 <td style="text-align:right;">
 0.2942541
+</td>
+<td style="text-align:left;">
+large
 </td>
 </tr>
 <tr>
@@ -1062,6 +1114,9 @@ cov_high
 <td style="text-align:right;">
 0.9540665
 </td>
+<td style="text-align:left;">
+small
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -1087,6 +1142,9 @@ cov_high
 </td>
 <td style="text-align:right;">
 0.7593565
+</td>
+<td style="text-align:left;">
+small
 </td>
 </tr>
 <tr>
@@ -1114,6 +1172,9 @@ cov_high
 <td style="text-align:right;">
 0.9691037
 </td>
+<td style="text-align:left;">
+large
+</td>
 </tr>
 <tr>
 <td style="text-align:right;">
@@ -1139,6 +1200,9 @@ cov_high
 </td>
 <td style="text-align:right;">
 0.4245890
+</td>
+<td style="text-align:left;">
+large
 </td>
 </tr>
 </tbody>
